fix: Jwt 인증 오류가 반환안됐던 문제 해결